--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,16 @@
 @charset "utf-8";
 /* CSS Document */
+/* Make rsponsive. Use display: flex, em and percent instead of px, add breakpoints.
+Using scss, font-size css changes need to come before color changes, or debug errors will show.
+BREAKPOINTS: 600px, 900px, 1200 px, 1800px.
+
+Color story to use:
+	bold pink: #fc519c
+	flamingo crimson: #e93a6a
+	tan: #e2cbb6
+	peru gold: #d89f3e
+	dark olive green: #4b452e
+*/
 
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
@@ -17,12 +28,15 @@ ul, li {
 	font-size: 10pt;
 	color: #333;
 }
-a {
-	color: orange;
+/* makes hyperlink stay same color even after being clicked */
+a, a:visited {
+	/* color: orange; */
+	color: #fff;
 	text-decoration: none;
 }
 a:hover, a:focus {
-	color: #3397db;
+	/* color: #3397db; */
+	color: #252831;
 	text-decoration: none;
 }
 a img{
@@ -40,7 +54,8 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   min-height: 100%;
 }
 #footer {
-  background-color: #444;
+  /* background-color: #444; */
+	background-color: #4b452e;
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
@@ -51,9 +66,11 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
-  background-color: #252831;
+  height: 70px;
+	background-color: #e93a6a;
+  /* background-color: #252831; */
   text-align:center;
+	padding: 1.5em 0 0;
 }
 nav h1 {
   margin: auto;
@@ -71,7 +88,7 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
+    /* width: calc(50% - 80px); */
 }
 
 /* Display list items side by side */
@@ -88,13 +105,15 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    /* color: #0275d8; */
+		color: #e93a6a;
     text-decoration: none;
 }
 
 /* Add a color on mouse-over */
 #breadcrumb li a:hover {
-    color: #01447e;
+    /* color: #01447e; */
+		color: #e93a6a;
     text-decoration: underline;
 }
 /* ====================== Map ====================== */
@@ -104,31 +123,49 @@ nav h1 a {
   background-color: #ccc;
 }
 /* ====================== Restaurant Filtering ====================== */
+/* #filter-list-container {
+	width: 100%;
+} */
 .filter-options {
   width: 100%;
-  height: 50px;
-  background-color: #3397DB;
+  height: 100%;
+  /* background-color: #3397DB; */
+	background-color: #4b452e;
   align-items: center;
+	/* justify-content: center;
+	padding: 10px;
+	display: flex;
+	flex-wrap: wrap;
+	*/
 }
 .filter-options h2 {
   color: white;
-  font-size: 1rem;
+  font-size: 1.3rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  margin: 10px 0 10px;
 }
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
+	border-radius: 4px;
   font-family: Arial,sans-serif;
-  font-size: 11pt;
-  height: 35px;
+  font-size: 14.5pt;
+  height: 25px;
   letter-spacing: 0;
-  margin: 10px;
+  /* margin: 10px; */
+	margin: 1em;
   padding: 0 10px;
   width: 200px;
 }
-
+/* .neighborhoods-select {
+	font-size: 14.5px;
+	margin: 1.5em;
+	padding: 1.5em;
+}
+.cuisines-select {
+	margin: 1.5em;
+} */
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
   background-color: #f3f3f3;
@@ -136,6 +173,11 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+	/* display: flex;
+	flex-direction: column;
+	align-items: center; */
+	grid-template-columns: repeat(4, 1fr);
+	display: grid;
 }
 #restaurants-list li {
   background-color: #fff;
@@ -145,18 +187,19 @@ nav h1 a {
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
+  /* width: 75%; */
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
+  /* min-height: 248px; */
   min-width: 100%;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  /* color: #f18200; */
+	color: #e93a6a;
   font-family: Arial,sans-serif;
   font-size: 14pt;
   font-weight: 200;
@@ -170,7 +213,7 @@ nav h1 a {
   font-size: 11pt;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #e93a6a;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
@@ -184,33 +227,43 @@ nav h1 a {
 
 /* ====================== Restaurant Details ====================== */
 .inside header {
-  position: fixed;
+  /* position: fixed; */
   top: 0;
   width: 100%;
-  z-index: 1000;
+  /* z-index: 1000; */
+	text-align: center;
+	display: flex;
+	flex-direction: column;
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
+  height: 500px;
+  /* position: absolute;
   right: 0;
-  top: 80px;
-  width: 50%;
+  top: 100%; */
+  width: 100%;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 .inside #map {
+	overflow: hidden;
+	position: relative;
   background-color: #ccc;
   height: 100%;
   width: 100%;
 }
 .inside #footer {
-  bottom: 0;
+  /* bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 50%; */
 }
 #restaurant-name {
-  color: #f18200;
+  /* color: #f18200; */
+	color: #e93a6a;
   font-family: Arial,sans-serif;
-  font-size: 20pt;
+  /* font-size: 20pt; */
   font-weight: 200;
   letter-spacing: 0;
   margin: 15px 0 30px;
@@ -218,11 +271,13 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+	width: 100%;
 }
 #restaurant-address {
-  font-size: 12pt;
-  margin: 10px 0px;
+	color: #e93a6a;
+  font-size: 14pt;
+	font-weight: 400;
+  margin: 2em;
 }
 #restaurant-cuisine {
   background-color: #333;
@@ -231,30 +286,44 @@ nav h1 a {
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
-  padding: 2px 0;
+  padding: 1em 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: 100%;
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  padding: 30px 40px;
+  /* width: 90%; */
+	text-align: left;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+#restaurant-container {
+	/* width: 75%; */
 }
 #reviews-container {
   padding: 30px 40px 80px;
+	width: 90%;
 }
 #reviews-container h2 {
-  color: #f58500;
-  font-size: 24pt;
+  /* color: #f58500; */
+	color: #e93a6a;
+  /* font-size: 24pt; */
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
 }
 #reviews-list {
   margin: 0;
-  padding: 0;
+  /* padding: 0; */
+	align-items: center;
+	justify-content: center;
+	padding: 10px;
+	display: flex;
+	flex-wrap: wrap;
 }
 #reviews-list li {
   background-color: #fff;
@@ -268,8 +337,206 @@ nav h1 a {
   width: 85%;
 }
 #reviews-list li p {
-  margin: 0 0 10px;
+  margin: 10px 0 10px;
+}
+#restaurant-hours {
+	width: 100%;
+}
+#restaurant-hours tr {
+	align-items: center;
 }
 #restaurant-hours td {
   color: #666;
+	padding: 0 1em;
 }
+.review-name {
+	background-color: #333;
+	color: #ddd;
+  float: left;
+  width: 50%;
+  box-sizing: border-box;
+  padding-left: 10px;
+  height: 40px;
+  padding-top: 7px;
+  font-weight: bold;
+  font-size: 14pt;
+	margin: 0 0 10px;
+	/*border-top-left-radius: 25px;*/
+}
+
+.review-date {
+	float: right;
+  width: 50%;
+	background-color: #333;
+	color: #ddd;
+  text-align: right;
+  box-sizing: border-box;
+  padding-right: 10px;
+  height: 40px;
+  padding-top: 7px;
+  font-size: 14pt;
+  font-weight: bold;
+	margin: 0 0 10px;
+}
+
+.review-rating {
+	float: left;
+	background-color: orange;
+	padding: 5px;
+	font-size: 10pt;
+	border-radius: 5px;
+	font-weight: bold;
+	color: white;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	margin: 0 0 10px;
+	margin-left: 10px;
+}
+
+.review-comments {
+	clear: left;
+	margin: 0 0 10px;
+	margin-left: 10px;
+	margin-right: 10px;
+}
+/* Need to add minimum of 3 media query breakpoints  */
+/* ====================== Media Queries  ====================== */
+/* 600px starts portrait tablets and large phones, 768px starts landscape tablet, 900px, 1200 px, 1800px */
+/* home page: main#maincontent, section#map-container, section#filter-list-container, div.filter-options,ul#restauraunts-list
+restaurant details page: main#maincontent, section#map-container, section#restaurant-container,h1#restaurant-name,.restaurant-img, section#reviews-container,ul#reviews-list, */
+
+@media only screen and (max-width : 1024px) {
+	#restaurants-list {
+		grid-template-columns: repeat(3, 1fr);
+	}
+
+	.inside #map-container {
+		width: 60%;
+	}
+
+	#restaurant-container {
+		width: 40%;
+	}
+
+	#reviews-container {
+		width: 36%;
+	}
+
+	.inside #footer {
+		width: 36%;
+	}
+}
+
+@media only screen and (max-width : 768px) {
+	#restaurants-list {
+		grid-template-columns: repeat(2, 1fr);
+	}
+
+	.inside #map-container {
+		height: 400px;
+		top: 130px;
+		width: 100%;
+	}
+
+	#restaurant-container {
+		padding: 0px;
+		padding-top: 530px;
+	}
+
+	#reviews-container {
+		width: 100%;
+		padding: 0px;
+		padding-bottom: 80px;
+	}
+
+	#restaurant-container, #reviews-list {
+		width: 100%;
+		grid-template-columns: repeat(2, 1fr);
+		/* align-items: start; */
+		/* grid-auto-rows: minmax(min-content, max-content); */
+		display: grid;
+	}
+
+	#restaurant-container div {
+		text-align: center;
+		margin-bottom: 15px;
+		padding-right: 10px;
+	}
+
+	#restaurant-hours, #restaurant-cuisine {
+		width: 100%;
+	}
+
+	#restaurant-name, #restaurant-cuisine {
+		margin: 0px;
+		margin-top: 30px;
+		margin-bottom: 20px
+	}
+
+	#restaurant-cuisine {
+		margin-bottom: 50px;
+	}
+
+	#reviews-container h2 {
+		text-align: center;
+		letter-spacing: 10px;
+	}
+
+	#reviews-list li {
+		margin-left: 10px;
+		margin-right: 10px
+		/* align-items: start; */
+	}
+
+	.inside #footer {
+		width: 100%;
+		padding-left: 0px;
+		padding-right: 0px;
+	}
+}
+
+@media only screen and (max-width : 480px) {
+	#restaurants-list {
+		grid-template-columns: repeat(1, 1fr);
+	}
+
+	.filter-options {
+		height: 150px;
+		text-align: center;
+	}
+
+	#restaurant-container, #reviews-list {
+		grid-template-columns: repeat(1, 1fr);
+	}
+
+	#restaurant-container {
+		padding-top: 380px;
+	}
+
+	.inside #map-container {
+		height: 250px;
+		top: 130px;
+		width: 100%;
+	}
+
+	#restaurant-container div {
+		margin-bottom: 15px;
+		padding-right: 0px;
+	}
+
+	#restaurant-cuisine {
+		margin: 0px;
+		font-size: 15pt;
+	}
+
+	#restaurant-name {
+		letter-spacing: 10px;
+		margin-top: 1em;
+		margin-bottom: 5px;
+	}
+}
+/* @media screen and (max-width: 768px) {
+  #restaurant-container, #reviews-container {
+    width: 100%;
+  }
+} */
