--- a/css/responsive.css
+++ b/css/responsive.css
@@ -383,6 +383,37 @@ restaurant-container {
 	margin-right: 10px;
 }
 
+@media only screen and (min-width : 1520px) {
+	#restaurants-list {
+		grid-template-columns: repeat(3, 1fr);
+	}
+
+	.inside #map-container {
+		width: 100%;
+    height: 450px;
+    top: 130px;
+	}
+
+	#restaurant-container {
+		{width: 100%;
+    padding-top: 1em;}
+    #restaurant-name-and-photo { width: 45%; }
+    #restuarant-hours-section { width: 45%; }
+	}
+
+	#reviews-container {
+		width: 100%;
+    padding: 0px;
+    padding-bottom: 80px;
+    align-items: center;
+    /* justify-self: center; */
+	}
+
+	.inside #footer {
+		width: 100%;
+	}
+}
+
 @media only screen and (max-width : 1200px) {
 	#restaurants-list {
 		grid-template-columns: repeat(3, 1fr);
